# warcrycolumn

./: .gitignore  README.md  __init__.py  app.py  columnconc.py  devcontainer.json  genconcrete.py  main  pack-045c043335b7a4650f898567d74c289beeb826c0.idx  pack-045c043335b7a4650f898567d74c289beeb826c0.pack  pack-045c043335b7a4650f898567d74c289beeb826c0.rev  pyproject.toml  requirements.txt
