[project]
name = "qckcolumn"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2",
    "matplotlib>=3.10",
    "pandas>=2.2",
    "scipy>=1.15",
    "sympy>=1.13",
    "streamlit>=1.42"
]

[project.optional-dependencies]
notebooks = [
    "jupyter",
    "plotly>=6.0.0"
]
handcalcs = [
    "handcalcs",
    "forallpeople",
]